Wed Jul  6 14:01:43 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * tools/modeling/tests/setup.pl:

          Merged a change that was initially developed in the sbir_transport
          branch: allows location of Ant when it's installed from a Linux
          package instead of the standard Ant directory layout.

Tue Jul  5 22:58:08 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * tools/dissector/dissector.mpc:
        * tools/dissector/packet-opendds.h:
        * tools/dissector/packet-opendds.cpp:
        * tools/dissector/plugin.cpp:
        * tools/dissector/sample_base.h:
        * tools/dissector/sample_base.cpp:

          Begin laying out the integration of sample dissection.

Tue Jul  5 16:16:55 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * MPC/config/dcps_lem_stub.mpb:
        * tools/modeling/validation/modelvalidation/build.xml:
        * tools/modeling/validation/modelvalidation/docs/README:
        * tools/modeling/validation/modelvalidation/resources/openddsvalidate.bat:
        * tools/modeling/validation/modelvalidation/resources/openddsvalidate.sh:

          Fixed whitespace.  Text files must end with a newline to avoid the
          warning from svn diff: "No newline at end of file"

Tue Jul  5 13:16:17 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * tools/dissector/giop_base.h:
        * tools/dissector/packet-datawriter.h:
        * tools/dissector/packet-opendds.h:
        * tools/dissector/packet-opendds.cpp:
        * tools/dissector/packet-repo.h:
        * tools/dissector/packet-repo.cpp:

          more fuzz

Sun Jul  3 16:54:03 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * tools/dissector/giop_base.cpp:
        * tools/dissector/packet-datawriter.cpp:
        * tools/dissector/packet-opendds.cpp:
        * tools/dissector/packet-repo.h:
        * tools/dissector/packet-repo.cpp:

          Fuzz fix, complete the association from publication ID to
          registered topic data type name.
